--- a/src/assets/scss/object/project/_header.scss
+++ b/src/assets/scss/object/project/_header.scss
@@ -184,8 +184,24 @@
     background: rgb(95, 165, 205);
     position: relative;
     padding-top: 100px;
- 
+    overflow: hidden;
 
+    @include is-sp {
+        overflow: hidden;
+    }
+ 
+    // clip top
+
+    .top-clip {
+        width: 800px;
+        height: 250px;
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+        background: linear-gradient(to left, #2593D5, #2579BF);
+        position: absolute;
+        top: 0%;
+        right: 0%;
+       
+    }
     // nav images
   .logo{
       width: 70px;
@@ -201,6 +217,8 @@
         width: 100%;
         padding: 0 0 0 50px;
         z-index: 999;
+        display: none;
+
         .brnd-logo {
             display: flex;
             width: 267px;
@@ -229,6 +247,7 @@
     
               &-pro {
                 font-family:cross-platform-yu-gothic;
+                position: relative;
     
                 &-link {
                     @include font-line(14,19);
@@ -248,7 +267,22 @@
                     a {
                         @include font-line(11,15);
                         color:#fff;
-                        font-weight: 700    ;
+                        font-weight: 700;
+                    }
+                }
+
+                .dd{
+                    position: relative;
+
+                    &::before {
+                        content: '';
+                        position: absolute;
+                        top: 40%;
+                        left: 110%;
+                        background: url(../../release/image/header/drop-d.png); 
+                        background-repeat: no-repeat;
+                        width: 100%;
+                        height: 100%;  
                     }
                 }
               }
@@ -278,12 +312,18 @@
         height: 660px;
         width: 1100px;
         position: relative;
-        background: linear-gradient(90deg,#4D95D1,#81B3D4);
+        background: linear-gradient(90deg,#81B3D4,#4D95D1);
         margin: 0 auto;
         display: flex;
         align-items: center;
         padding-left: 60px;
+        z-index: 2;
 
+        @include is-sp {
+            margin: 0;
+            width: 95%;
+            height: 1005px;
+        }
 
         &::before {
             content:'';
@@ -292,7 +332,12 @@
             right: 0;
             height: 674px;
             width: 585px;
-            background: url(../../release/image/header/img-banner1.png);           
+            background: url(../../release/image/header/img-banner1.png);     
+            
+            @include is-sp {
+                right: -15%;
+
+            }
         }
 
         &-hdr-01 {
@@ -314,24 +359,65 @@
 
         &-hdr-02 {
             margin-left: 18px;
+            color: #fff;
 
             &-txt {
+                z-index: 2;
 
-                p:nth-child(1) {
+                &-1 {
                     @include font-line(30,41);
                     font-weight: 500;
                     font-family: yu-mincho-pr6n, sans-serif;
                     color:#fff;
                     letter-spacing: 0.3em;
                 }
-                
-                p:nth-child(2) {
+
+                &-sp {
+                    font-family:cross-platform-yu-gothic;
+                    display: none;
+
+                    &-cont {
+                        position: relative;
+                     
+
+                        &:before {
+                            content: '';
+                            position: absolute;
+                            width: 4px;
+                            height: 30px;
+                            background-color: #fff;
+                        }
+
+                        &-1 {
+                            @include font-line(27,30);
+                            letter-spacing: 0.28em;
+                            padding-left: 10px;
+                            margin-bottom: 22px;
+                        }
+                        &-2 {
+                            @include font-line(27,30);
+                            letter-spacing: 0.28em;
+                            padding-left: 10px;
+                        }
+                    }
+                }
+
+
+                &-2 {
                     @include font-line(10,20);
                     font-weight: 400;
                     font-family: century-gothic, sans-serif;
                     color:#fff;
                     letter-spacing: 0.2em;
-                }   
+                }  
+
+                
+                
+            }
+
+            &-spimg {
+                width: 151px;
+                display: none;
             }
 
             &-desc {
@@ -382,6 +468,67 @@
                         padding-left: 10px;
                     }
                 }
+            }
+        }
+
+        &::after {
+            content: '';
+            position: absolute;
+            top:0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: url(../../release/image/header/circ-bnnr.png);
+
+            @include is-sp {
+                display: none;
+            }
+        }
+
+        &-txt01 {
+            position: absolute;
+            top: 20px;
+            right: 9px;
+            z-index: 555;
+
+            @include is-sp {
+                top: 142px;
+            }
+
+            &-hon {
+                font-family: yu-mincho-pr6n, sans-serif;
+                @include font-line(30,41);
+                font-weight: 500;
+                letter-spacing: 0.3em;
+                color:#fff;
+
+                @include is-sp {
+                    @include font-line(46,64);
+                }
+            }
+        }
+
+        &-txt02 {
+            position: absolute;
+            top: 58px;
+            right: 20px;
+
+            @include is-sp {
+                top: 200px;
+            }
+
+            &-ver {
+                writing-mode: tb;
+                font-family: yu-mincho-pr6n, sans-serif;
+                @include font-line(30,41);
+                font-weight: 500;
+                letter-spacing: 0.3em;
+                color:#fff;
+
+                @include is-sp {
+                    @include font-line(46,64);
+                }
+
             }
         }
     }
