--- a/src/assets/scss/pages/_top-page.scss
+++ b/src/assets/scss/pages/_top-page.scss
@@ -37,7 +37,7 @@
                     color: #fff;
 
                     @include is-sp {
-                        @include font-line(50,72)
+                        @include font-line(50,72);
                         letter-spacing:0.2em;
                         margin-bottom: 34px;
                     }
@@ -276,7 +276,7 @@
             @include is-sp {
                 position: absolute;
                 top: -9%;
-                right: -17%;
+                right: 0%;
             }
         }
 
