add bebas neue font

--- a/src/assets/scss/pages/_ourenterprises.scss
+++ b/src/assets/scss/pages/_ourenterprises.scss
@@ -146,7 +146,7 @@
 
 					.num {
 						@include font-line(108);
-						font-family: BebasNeue;
+						font-family: bebas-neue, sans-serif;
 						color: #b7d4e4;
 						position: absolute;
 						top: 98px;
