--- a/src/assets/scss/pages/_ourenterprises.scss
+++ b/src/assets/scss/pages/_ourenterprises.scss
@@ -5,10 +5,10 @@
 			rgba(37, 121, 191, 1) 0%,
 			rgba(37, 147, 213, 1) 50%
 		);
-		padding-bottom: 100px;
+		// padding-bottom: 100px;
 
 		@include is-sp {
-			padding-bottom: 55px;
+			padding-bottom: 0;
 		}
 
 		.l-wrap {
@@ -40,7 +40,7 @@
 
 		@include is-sp {
 			@include font-line(12);
-			color: #9FC4E3;
+			color: #9fc4e3;
 		}
 	}
 
@@ -86,6 +86,8 @@
 			display: flex;
 			justify-content: space-between;
 			flex-wrap: wrap;
+			position: relative;
+			z-index: 99999;
 
 			.col {
 				width: calc(50% - 70px);
@@ -146,12 +148,16 @@
 
 					.num {
 						@include font-line(108);
-						font-family: bebas-neue, sans-serif;
+						font-family: "Bebas Neue", cursive;
 						color: #b7d4e4;
 						position: absolute;
-						top: 98px;
+						top: 105px;
 						z-index: 1;
 						left: 20px;
+
+						@include is-sp {
+							top: 109px;
+						}
 					}
 
 					.info {
@@ -192,6 +198,10 @@
 							@include is-max(900px) {
 								@include font-line(22);
 							}
+
+							@include is-max(338px) {
+								letter-spacing: -1px !important;
+							}
 						}
 
 						&-sub {
@@ -203,7 +213,45 @@
 					}
 				}
 
+				&:nth-child(1) {
+					@include is-sp {
+						display: flex;
+						flex-direction: column;
+
+						.heading03 {
+							order: 4;
+							padding-top: 15px;
+							padding-bottom: 0;
+						}
+
+						.oe__btns {
+							order: 5;
+						}
+					}
+
+					@include is-max(338px) {
+						.info {
+							width: 67%;
+						}
+					}
+				}
+
 				&:nth-child(2) {
+					@include is-sp {
+						display: flex;
+						flex-direction: column;
+
+						.heading03 {
+							order: 4;
+							padding-top: 15px;
+							padding-bottom: 0;
+						}
+
+						.oe__btns {
+							order: 5;
+						}
+					}
+
 					.info {
 						width: 87%;
 						background: linear-gradient(
@@ -236,9 +284,23 @@
 				}
 
 				&:nth-child(4) {
+					
 					@include is-max(863px) {
 						.num {
-							top: 80px;
+							top: 107px;
+						}
+						.info-sub {
+							letter-spacing: 0.02em;
+						}
+					}
+
+					@include is-sp {
+						padding-bottom: 72px;
+					}
+
+					@include is-max(384px) {
+						.num {
+							top: 87px;
 						}
 					}
 
@@ -256,6 +318,16 @@
 							@include is-max(1073px) {
 								letter-spacing: 0.03em;
 							}
+						}
+
+						@include is-max(347px) {
+							@include font-line(23);
+						}
+					}
+
+					.heading01 {
+						@include is-max(344px) {
+							font-size: 7.2vw;
 						}
 					}
 				}
@@ -294,7 +366,7 @@
 					font-family: cross-platform-yu-gothic;
 					font-weight: 500;
 					letter-spacing: 0.15em;
-					padding: 0 0 20px 0;
+					padding: 0 0 30px 0;
 					font-size: 0.8125rem;
 					line-height: 2;
 
@@ -325,8 +397,8 @@
 
 	&__bg_2 {
 		position: absolute;
-		top: 200px;
-		left: 0;
+		top: -124px;
+		left: -61px;
 		// width: 100%;
 
 		@include is-sp {
@@ -338,6 +410,12 @@
 		background-color: #fff;
 		width: 45%;
 		color: #4988c8;
+
+		.txt {
+			@include is-max(341px) {
+				@include font-line(12);
+			}
+		}
 	}
 }
 
