change: contact form

--- a/src/assets/scss/pages/_contact.scss
+++ b/src/assets/scss/pages/_contact.scss
@@ -1,86 +1,253 @@
-.contact{
+.contact-frm{
     .sect_1{
-       background-image: linear-gradient(to right, #2579bf , #2593d5);
-       padding: 100px 0 20px 0;
+        background-image: linear-gradient(to right, #2579bf , #2593d5);
+        padding: 100px 0 20px 0;
     }
 
-        &__inner{
+    &__bg-white{
+        background-color: #fff;
+        margin: 11px 0 0 0;
+        padding: 30px;
+    }
+
+        &__bg-txt{
+            background-color: #e2f3fb;
+            padding: 10px 0;
+
+            &--ttl{
+            @include font-line(15);
+            font-weight: 700;
+            font-family:cross-platform-yu-gothic;
+            letter-spacing: 0.320em;
+            color: #258acf;
             text-align: center;
-
-            &--txt{
-                font-family: yu-mincho-pr6n, sans-serif;
-                font-weight: 600;
-                color: #fff;
-                letter-spacing: 0.2em;
-                padding: 0 0 15px 0;
-                @include font-line(20);
-            }
-
-            &--desc{
-                font-family:cross-platform-yu-gothic;
-                font-weight: 500;
-                color: #fff;
-                letter-spacing: 0.2em;
-                @include font-line(13);
-                padding: 0 0 26px 0;
             }
         }
 
-        &__box{
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
-            background-color: #fff;
-            padding: 20px 0;
+        &__desc{
+            @include font-line(11);
+            font-family:cross-platform-yu-gothic;
+            font-weight: 500;
+            text-align: center;
+            color: #333333;
+            padding: 30px 0 50px 0;
+            line-height: 22px;
+        }
 
-            &--p1{
-                background-color: #e2f3fb;
-                padding: 10px 40px;
-                .txt{
-                    font-family:cross-platform-yu-gothic;
-                    @include font-line(15);
-                    font-weight: 700;
-                    color: #258acf;
-                    letter-spacing: 0.320em;
-                }
+        &__req{
+            &--txt{
+                @include font-line(12);
+                font-family:cross-platform-yu-gothic;
+                font-weight: 500;
+                color: #258acf;
+            }
+        }
+
+        form{
+            padding: 0 60px;
+        }
+
+        &__inner-row{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            
+            .bg-lg{
+                background-color: red;
+                padding: 50px 0;
             }
 
-            &--p2{
-                .txt{
-                    padding: 0 25px;
-                    a{
-                    font-family: century-gothic, sans-serif;
-                    @include font-line(36);
-                    font-weight: 700;
-                    color: #258acf;
-                    display: flex;
-                    align-items: center
+            &:nth-of-type(2){
+             border-top: 1px solid #258acf;
+             border-bottom: 1px solid #258acf; 
+            }
+            &:nth-of-type(3){
+             border-bottom: 1px solid #258acf; 
+            }
+            &:nth-of-type(4){
+            border-bottom: 1px solid #258acf; 
+                div{
+                    &:nth-child(2){
+                        width: 60%;
+                    }
+
+                    input{
+                        width: 100%;
                     }
                 }
             }
+            &:nth-of-type(5){
+            border-bottom: 1px solid #258acf; 
+                div{
+                    &:nth-child(2){
+                        width: 60%;
+                    }
 
-            &--p3{
-                .txt{
-                    @include font-line(11);
-                    font-family:cross-platform-yu-gothic;
-                    font-weight: 600;
+                    input{
+                        width: 100%;
+                    }
                 }
             }
-        }
+             &:nth-of-type(6){
+             border-bottom: 1px solid #258acf; 
+                div{
+                    &:nth-child(2){
+                        width: 60%;
+                        display: block;
+                    }
+                    input{
+                        width: 100%;
+                    }
+                }
+                
+                small{
+                    display: flex;
+                    align-items: center;
 
-        .c-buttonCase{
-            margin-top: 70px;
-            .txt{
-                letter-spacing: 0.2em;
+                    &:nth-child(1){
+                        margin: 0 0 10px 0;
+                    }
+                }
+
+                label{
+                    width: 90px;
+                }
+            }
+
+            &:nth-of-type(7){
+                 border-bottom: 1px solid #258acf; 
+                div{
+                    &:nth-child(2){
+                        width: 60%;
+                    }
+                }
+
+                input{
+                    width: 100%;
+                }
+
+                span{
+                    padding: 0 5px;
+                }
+            }
+
+            &:nth-of-type(8){
+                 border-bottom: 1px solid #258acf; 
+                div{
+                    &:nth-child(2){
+                        width: 60%;
+                        justify-content: space-between;
+                    }
+                }
+
+                input{
+                    width: 100%;
+                }
+
+                span{
+                    padding: 0 15px;
+                }
+
+                small{
+                    
+                    &:nth-child(1){
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                    }
+
+                    width: 25%;
+                }
+
+                p{
+                    text-align: center;
+                    background-color: #258acf;
+                    color: #fff;
+                    padding: 10px;
+                    border-radius: 10px;
+                }
+            }
+              &:nth-of-type(9){
+                   .bg-h{
+                background-color: #e2f3fb !important;
+                padding: 100px 0 !important;
+            }
+             border-bottom: 1px solid #258acf; 
+                div{
+                    &:nth-child(2){
+                        width: 60%;
+                        display: block;
+                    }
+                    input{
+                        width: 100%;
+                    }
+                }
+                
+                small{
+                    display: flex;
+                    align-items: center;
+
+                    &:nth-child(1){
+                        margin: 0 0 10px 0;
+                    }
+                      &:nth-child(2){
+                        margin: 0 0 10px 0;
+                    }
+                }
+
+                label{
+                    width: 90px;
+                }
+            }
+
+            
+            .label-txt{
+                width: 40px;
+            }
+
+            input{
+                width: 85%;
+                padding: 10px;
+                border: 1px solid #258acf;
+            }
+
+            div{
+                &:nth-child(1){
+                    width: 37%;
+                    text-align: center;
+                    padding: 20px 0;
+                    background-color: #e2f3fb;
+                }
+
+                  &:nth-child(2){
+                    width: 30%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-around;
+                }
+
+                   &:nth-child(3){
+                    width: 30%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-around;
+                }
+            }
+
+            .bg-h{
+                background-color: #e2f3fb !important;
+                padding: 50px 0 !important;
             }
         }
 
-     
+  
     
 
+       
+   
 
+  
 
-
+  
 
 }
